--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin-left: 400px;
     padding: 0;
     background-image: url();
     background-size: cover;
@@ -10,14 +10,27 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
+}
+
+
+.image-container {
+    width: 49%; /* Ensure the image doesn't exceed its container */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Remove extra space below the image */
+    margin: 0 auto; /* Center the image horizontally */
+    object-fit: cover;
+    position: absolute;
+    top: 50%; /* Align to the center vertically */
+    left: 38%; /* Align to the center horizontally */
+    transform: translate(-50%, -50%); /* Center the image precisely */
 }
 
 .login-container {
-    background-color: rgba(237, 241, 233, 0.8);
+    background-color: rgba(249, 249, 249, 0.8);
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(50, 36, 36, 0.1);
     text-align: center;
     max-width: 400px;
     width: 80%;
@@ -32,13 +45,13 @@ input {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #5b5555;
     border-radius: 4px;
 }
 
 button {
     background-color: #4caf50;
-    color: #fff;
+    color: #ffffff;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -46,5 +59,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #3ba040;
 }
