--- a/style.css
+++ b/style.css
@@ -11,22 +11,27 @@
 body{
   background: rgb(226, 226, 226);
 }
+
 nav{
   position: sticky;
   top: 0;
   bottom: 0;
   height: 100vh;
   left: 0;
-  width: 90px;
+  width: 70px;
   /* width: 280px; */
   background: #fff;
   overflow: hidden;
   transition: 1s;
 }
+
+
 nav:hover{
   width: 280px;
   transition: 1s;
 }
+
+
 .logo{
   text-align: center;
   display: flex;
@@ -34,17 +39,22 @@ nav:hover{
   padding-bottom: 3rem;
 }
 
+
 .logo img{
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  border-radius: 40%;
 }
+
 .logo span{
-  font-weight: bold;
+  font-weight: normal;
   padding-left: 15px;
-  font-size: 18px;
+  font-size: 15px;
   text-transform: uppercase;
 }
+
+
+
 a{
   position: relative;
   width: 280px;
@@ -73,10 +83,79 @@ a:hover i{
   color: #34AF6D;
   transition: 0.5s;
 }
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: rgb(18, 12, 12);
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  cursor: pointer;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #e1dddd;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+.dropdown-content a {
+  float: none;
+  color: rgb(8, 4, 4);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+
+.dropdown:hover .dropbtn, .dropbtn:focus  {
+  background-color: #aeadad;
+  color: rgb(245, 232, 232);
+}
+
+.dropdown-content a:hover {
+  background-color: #918a8a;
+  color: rgb(27, 22, 22);
+}
+
+/* .dropdown:hover .dropdown-content {
+  display: block;
+} */
+
+.show {
+  display: block;
+}
+
 .logout{
   position: absolute;
   bottom: 0;
 }
+
+.logout i{
+  width: 40px;
+  height: 40px;
+  border-radius: 40%;
+}
+
+.logout span{
+  font-weight: normal;
+  padding-left: 15px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+
 
 .container{
   display: flex;
